# ARISE

./: .env.example  .gitignore  README.md  pyproject.toml
config/: isaac_lab_config.yaml  magistral_config.yaml  ros2_params.yaml
docker/: Dockerfile.ros2  docker-compose.yml
docs/: REWARD_ENGINEERING.md  SETUP_GUIDE.md
envs/: __init__.py  recovery_env.py
ros2_ws/src/arc_m_skills/: package.xml  setup.py
ros2_ws/src/arc_m_skills/arc_m_skills/: __init__.py  magistral_planner.py  policy_manager.py  robot_interface.py  state_estimator.py
ros2_ws/src/arc_m_skills/config/: ros2_params.yaml
ros2_ws/src/arc_m_skills/launch/: arc_m_launch.py
scripts/: ros2_docker.sh  setup_environment.sh  test_environment.py  test_magistral.py  train_recovery_policy.py
