[project]
name = "arise"
version = "0.1.0"
description = "Advanced Hierarchical Reinforcement Learning system combining Reasoning LLMs with RL policies for autonomous robot recovery"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "ARC-M Team", email = "team@arc-m.dev" }]
keywords = ["reinforcement-learning", "robotics", "llm", "isaac-lab", "ros2"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "gymnasium>=0.29.0",
    "mistralai>=1.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
# Training dependencies (requires Linux + NVIDIA GPU)
training = [
    "rsl-rl>=2.0.0",
    "stable-baselines3>=2.0.0",
    "tensorboard>=2.14.0",
    "wandb>=0.15.0",
    "onnxruntime-gpu>=1.16.0",
]

# ROS2 Python dependencies (for use inside Docker container)
ros = [
    "pyzmq>=25.0.0",
    "transforms3d>=0.4.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
arise-train = "scripts.train_recovery_policy:main"
arise-test-magistral = "scripts.test_magistral:main"

[project.urls]
Homepage = "https://github.com/arc-m/arise"
Documentation = "https://github.com/arc-m/arise#readme"
Repository = "https://github.com/arc-m/arise"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["envs", "scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
# Isaac Lab packages require special index
# Note: Isaac Sim must be installed separately on Linux with NVIDIA GPU

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
