<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arc_m_skills</name>
  <version>0.1.0</version>
  <description>ROS 2 skill library for ARC-M autonomous recovery policies</description>
  
  <maintainer email="team@arc-m.dev">ARC-M Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- Robot-specific dependencies -->
  <depend>unitree_ros2</depend>
  
  <!-- ML dependencies -->
  <exec_depend>python3-torch</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
